# Pixelshop

./: .gitattributes  README.md  io.github.jspast.Pixelshop.json  meson.build
build-aux/: io.github.jspast.Pixelshop.json  pixelshop.iss
data/: io.github.jspast.Pixelshop.desktop.in  io.github.jspast.Pixelshop.gschema.xml  io.github.jspast.Pixelshop.metainfo.xml.in  io.github.jspast.Pixelshop.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.c  main.css  meson.build  pixelshop-application.c  pixelshop-application.h  pixelshop-histogram-window.blp  pixelshop-histogram-window.c  pixelshop-histogram-window.h  pixelshop-image.c  pixelshop-image.h  pixelshop-window.blp  pixelshop-window.c  pixelshop-window.h  pixelshop.gresource.xml
src/gtk/: help-overlay.blp
src/include/: gtkchart.c
